narrowband quadrature component revision

--- a/common/com_channel.tex
+++ b/common/com_channel.tex
@@ -144,17 +144,15 @@ Examples of physical channels include
 free space, air, water, soil, copper wire, and fiber optic cable.
 Information is carried through a channel using some physical process.
 These processes include:
-
-\begin{tabular}{cl|ll}
-             & Process          & Example             \\
-   \hline
-   $\imark$ & electromagnetic waves & free space, air    & \ifxref{em}{app:em}  \\
-   $\imark$ & acoustic waves        & water, soil         \\
-   $\imark$ & electric field potential (voltage)  & wire                \\
-   $\imark$ & light            & fiber optic cable   \\
-   $\imark$ & quantum mechanics         &
+\\\indentx\begin{tabular}{cl|ll}
+              & Process                            & Example
+   \\\hline
+     $\imark$ & electromagnetic waves              & free space, air    & \ifxref{em}{app:em}
+   \\$\imark$ & acoustic waves                     & water, soil
+   \\$\imark$ & electric field potential (voltage) & wire
+   \\$\imark$ & light                              & fiber optic cable
+   \\$\imark$ & quantum mechanics                  &
 \end{tabular}
-
 
 %======================================
 \subsection{Receive operator}
@@ -199,7 +197,7 @@ best of the best solutions.
 
 The nature of $\opR$ depends heavily on the nature of $\opC$.
 If $\opCTi$ does not exist,
-then the ideal $\opR$ is one that is optimal with respect to some criterion.
+then the ideal $\opR$ is one that is optimal with respect to some criterion \xref{chp:est}
 If $\opC$ is deterministic,
 then appropriate optimization criterion may include
 \begin{liste}
@@ -208,11 +206,6 @@ then appropriate optimization criterion may include
    \item minimum peak distortion criterion.
 \end{liste}
 If $\opC$ is stochastic
-%\footnote{
-%  An example of a stochastic $\opC$ includes the additive noise channel
-%  operator $\opCan$ and the AWGN channel operator $\opCawgn$.
-%  \xref{chp:awgn}
-%  }
 then appropriate optimization criterion may include
 \\\begin{tabular}{clll}
      $\imark$ & Bayes:                                  & pdf known and cost function defined
@@ -225,19 +218,6 @@ then appropriate optimization criterion may include
 Making $\opR$ optimum with respect to one of these criterion leads to
 an \hie{estimate} $\sue = \opR\opC\opT\vu$ that is also optimum
 with respect to the same criterion \xref{def:ML}.
-
-%20190726-see {def:ML}%%---------------------------------------
-%20190726-see {def:ML}%\begin{definition}
-%20190726-see {def:ML}%%---------------------------------------
-%20190726-see {def:ML}%Let the following estimates be defined as follows:
-%20190726-see {def:ML}%\defbox{\begin{array}{MM>{\ds}lc>{\ds}l}
-%20190726-see {def:ML}%   \opd{Bayesian}:                        &             & \estB   &\eqd& \argmin_{\theta} C(\theta,\pdfp(s,r)) \\
-%20190726-see {def:ML}%   \opd{Mean square}                      &(\opd{MS}):  & \estMS  &\eqd& \argmin_{\theta} \pE\norm{C(\theta,\pdfp(s,r))}^2 \\
-%20190726-see {def:ML}%   \opd{mini-max}                         &(\opd{MM}):  & \estMM  &\eqd& \argmin_{\theta}\max_{\pdfp} C(\theta,\pdfp(s,r)) \\
-%20190726-see {def:ML}%   \opd{maximum a-posteriori probability} &(\opd{MAP}): & \estMAP &\eqd& \argmax_{\theta} \pP{s(t;\theta)|\fr(t)} \\
-%20190726-see {def:ML}%   \opd{maximum likelihood}               &(\opd{ML}):  & \estML  &\eqd& \argmax_{\theta} \pP{\fr(t)|s(t;\theta)}
-%20190726-see {def:ML}%\end{array}}
-%20190726-see {def:ML}%\end{definition}
 
 %======================================
 \section{Optimization in the case of additional operations}
@@ -445,7 +425,7 @@ when making an optimal decision.
 And in fact the receiver does indeed not have to.
 As it turns out, a single finite set of \hie{statistics}
 $\setn{\fdotr_1,\;\fdotr_2,\ldots,\fdotr_N}$
-is sufficient for the receiver to make an optimal decision as to
+is sufficient \xref{thm:sstat} for the receiver to make an optimal decision as to
 which value the transmitter sent.
 
 %%---------------------------------------
