--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -6,6 +6,7 @@
 %======================================
 \chapter{Estimation Overview}
 \label{app:est}
+\label{chp:est}
 %======================================
 %======================================
 \section{Estimation types}
