add Analog Devices ADL5387 Quadrature Demodulator remarks

--- a/common/narrowband.tex
+++ b/common/narrowband.tex
@@ -132,22 +132,25 @@ Let $\fx(t)$ be defined as in \pref{def:cenv}.
 \end{proposition}
 \begin{proof}
 \begin{align*}
-    &\mcom{\boxed{\fa(t)\cos\brs{2\pi f_c t + \phi(t)}}}{amplitude-phase form}
+  \fx(t)
+    &\eqd \mcom{\boxed{\fa(t)\cos\brs{2\pi f_c t + \phi(t)}}}{amplitude-phase form}
     && \text{amplitude and phase form}
     && \text{\xref{def:cenv}}
   \\&= \mcom{\fa(t)\cos[\phi(t)]}{$\fp(t)$} \cos[2\pi f_c t]
       -\mcom{\fa(t)\sin[\phi(t)]}{$\fq(t)$} \sin[2\pi f_c t]
     && \text{by \thme{double angle formulas}}
-    && \text{\xref{thm:trig_double}}
-  \\&= \mbox{\boxed{\fp(t)\cos[2\pi f_c t] -\fq(t)\sin[2\pi f_c t]}}{quadrature form}
+    && \text{\ifxref{harTrig}{thm:trig_double}}
+  \\&= \mcom{\boxed{\fp(t)\cos[2\pi f_c t] -\fq(t)\sin[2\pi f_c t]}}{quadrature form}
     && \text{quadrature form}
     && \text{\xref{def:cenv}}
   \\&= \Real\brp{[\fp(t)+i\fq(t)][\cos(2\pi f_c t) + i\sin(2\pi f_c t)]}
     && \text{by definitions of $\Real$}
     && \text{\xref{def:Re}}
   \\&= \mcom{\boxed{\Reb{\fx_l(t)e^{i2\pi f_c t}}}}{complex envelope form}
-    && \text{complex envelope form}
-    && \text{\xref{def:cenv}}
+    && \text{by \thme{Euler's identity}}
+    && \text{\ifxref{harTrig}{thm:eid}}
+    %&& \text{complex envelope form}
+    %&& \text{\xref{def:cenv}}
 \end{align*}
 \end{proof}
 
@@ -157,15 +160,15 @@ The three canonical forms in \prefpp{prop:canforms} are now designated formally:
 \label{def:canforms}
 \label{def:cenv}
 %---------------------------------------
-Let $\fx(t)$ be defined as in \pref{def:cenv}.
-\defbox{\begin{array}{>{\ds}lMM}
-     \fa(t)\cos\brs{2\pi f_c t + \phi(t)}            & is the \structd{amplitude and phase form})     & of $\fx(t)$
-   \\\fp(t)\cos(2\pi f_c t) - \fq(t)\sin(2\pi f_c t) & is the \structd{quadrature form})\footnotemark & of $\fx(t)$
-   \\\Reb{\fx_l(t)e^{i2\pi f_c t}}                   & is the \structd{complex envelope form})        & of $\fx(t)$
+Let $\fx(t)$ be a \structe{narrowband signal}.
+\defbox{\begin{array}{>{\ds}lMMMM}
+     \fx(t)\eqd\fa(t)\cos\brs{2\pi f_c t + \phi(t)}            & is the & \structd{amplitude and phase form}     & of & $\fx(t)$
+   \\\fx(t)\eqd\fp(t)\cos(2\pi f_c t) - \fq(t)\sin(2\pi f_c t) & is the & \structd{quadrature form}\footnotemark & of & $\fx(t)$
+   \\\fx(t)\eqd\Reb{\fx_l(t)e^{i2\pi f_c t}}                   & is the & \structd{complex envelope form}        & of & $\fx(t)$
 \end{array}}
 \footnotetext{
 $\fx(t) = \fp(t)\cos(2\pi f_c t) - \fq(t)\sin(2\pi f_c t) $
-is also known as \structe{Rice's representation}. \\
+is also known as \structe{Rice's representation}.\\
 Reference: \citerp{srv}{23}
 }
 \end{definition}
@@ -178,45 +181,59 @@ modulated narrowband signal $\fx(t)$ and some quadrature components defined in \
 \label{prop:canforms_quad}
 %---------------------------------------
 \propbox{\begin{array}{rc>{\ds}l | rc>{\ds}l}
-    \fx_l(t) &=& \fa(t)e^{i\phi(t)}
+    \fx_l(t) &=& \mc{3}{l}{\fa(t)e^{i\phi(t)}}
   \\\fa(t)   &=& \sqrt{\fp^2(t) + \fq^2(t)} & \phi(t) &=& \arctan\frac{\fq(t)}{\fp(t)}
   \\\fp(t)   &=& \fa(t)\cos\phi             & \fq(t)  &=& \fa(t)\sin\phi
   \\\fp(t)   &=& \Reb{\fx_l(t)}             & \fq(t)  &=& \Imb{\fx_l(t)}
 \end{array}}
 \end{proposition}
 \begin{proof}
-$\begin{array}{*{12}{l}}
+\begin{align*}
    \fp
-     &=& \Reb{\fp + i\fq}
-     &=& \Reb{\fx_l}
+     &=  \Reb{\fp + i\fq}
+    &&=  \Reb{\fx_l}
 \\
    \fq
-     &=& \Imb{\fp + i\fq}
-     &=& \Imb{\fx_l}
-\\ \\
+     &=  \Imb{\fp + i\fq}
+    &&=  \Imb{\fx_l}
+\\
    \fp
-     &=& \Reb{\fp + i\fq}
-     &=& \Reb{\fa e^{i\phi}}
-     &=& \Reb{\fa\cos\phi + i\fa\sin\phi}
-     &=& \fa\cos\phi
+     &= \Reb{\fp + i\fq}
+    &&= \Reb{\fa e^{i\phi}}
+    &&= \Reb{\fa\cos\phi + i\fa\sin\phi}
+    &&= \fa\cos\phi
 \\
    \fq
-     &=& \Imb{\fp + i\fq}
-     &=& \Imb{\fa e^{i\phi}}
-     &=& \Imb{\fa\cos\phi + i\fa\sin\phi}
-     &=& \fa\sin\phi
+     &= \Imb{\fp + i\fq}
+    &&= \Imb{\fa e^{i\phi}}
+    &&= \Imb{\fa\cos\phi + i\fa\sin\phi}
+    &&= \fa\sin\phi
 \\
    \fa^2
-     &=& \fa^2 (\cos^2\phi + \sin^2\phi)
-     &=& (\fa \cos\phi)^2 + (\fa\sin\phi)^2
-     &=& \fp^2 + \fq^2
+     &= \fa^2 (\cos^2\phi + \sin^2\phi)
+    &&= (\fa \cos\phi)^2 + (\fa\sin\phi)^2
+    &&= \fp^2 + \fq^2
 \\
    \tan\phi
-     &=& \frac{\sin\phi}{\cos\phi}
-     &=& \frac{\fa\sin\phi}{\fa\cos\phi}
-     &=& \frac{\fq}{\fp}
-\end{array}$
+     &= \frac{\sin\phi}{\cos\phi}
+    &&= \frac{\fa\sin\phi}{\fa\cos\phi}
+    &&= \frac{\fq}{\fp}
+\end{align*}
 \end{proof}
+
+%---------------------------------------
+\begin{minipage}{\tw-60mm}
+\begin{remark}
+%---------------------------------------
+In practice (with real hardware), you will likely first have access to
+the quadrature components $\fp(t)$ and $\fq(t)$.
+Take for example the \hie{Analog Devices ADL5387 Quadrature Demodulator} and
+evaluation board, as illustrated to the right.\footnotemark
+Note that \fncte{quadrature component} $\fp(t)$ is available at connector ``Q OUTPUT"
+     and  \fncte{inphase component}    $\fq(t)$ is available at connector ``I OUTPUT".
+\end{remark}
+\end{minipage}\hfill\tbox{\includegraphics[width=55mm]{../common/ic/ADL5387.jpg}}
+\footnotetext{diagram copied from \citeP{ADL5387}}
 
 %======================================
 \section{Frequency Representation}
