Cauchy Schwartz inequality ==> Cauchy Schwartz Inequality

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -854,6 +854,7 @@ I. Proofs for equalities:
     && \text{\xref{def:H1}}
 \end{align*}
 
+\newpage
 II. Proof for monoticity:
 \begin{enumerate}
   \item Let $p\eqd s^2$ \label{item:Hs_mono_p}
@@ -868,7 +869,7 @@ II. Proof for monoticity:
            - 4 \Swxx \abs{\Swxy}^2\Swyy
            +   \Swxx^2\brp{p \Swxx - \Swyy}^2
         && \brp{\begin{array}{M}
-             by \thme{Cauchy Schwartz inequality}\\
+             by \thme{Cauchy Schwartz Inequality}\\
              \xref{thm:cs}
            \end{array}}
       \\&=   \cancelto{0}{4 \Swxx \Swyy \abs{\Swxy}^2}
@@ -960,7 +961,7 @@ Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
          = \frac{\abs{\inprod{\rvy}{\rvx}}}{\norm{\rvx}^2}
       \\&\le \frac{\abs{\inprod{\rvy}{\rvx}}}{\norm{\rvx}^2}
              \abs{\frac{\norm{\rvx}\norm{\rvy}}{\inprod{\rvy}{\rvx}}}^2
-        && \text{by \thme{Cauchy Schwartz inequality}}
+        && \text{by \thme{Cauchy Schwartz Inequality}}
         && \text{\prefp{thm:cs}}
       \\&= \frac{\norm{\rvy}^2}{\abs{\inprod{\rvy}{\rvx}}}
          = \abs{\frac{\norm{\rvy}^2}{\inprod{\rvx}{\rvy}}}
@@ -1803,8 +1804,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
       \FY-\FV &= \FQ = \estH\FP = \estH (\FX-\FU)
         && \text{by definition of $\estH$}
       \\\estH \FU-\FV &= \estH \FX-\FY
-        && \text{by \prope{left distributive} prop.} % of \ope{linear operator}s
-        && \text{\xref{thm:L_LMN}}
+        && \text{by \prope{left distributive} property % of \ope{linear operator}s
+                 \xref{thm:L_LMN}}
       \\\pE\brp{\brs{\estH\FU-\FV}\brs{\estH\FU-\FV}^\ast} &= \pE\brp{\brs{\estH \FX-\FY}\brs{\estH \FX-\FY}^\ast}
       \\\abs{\estH}^2\Swuu - \estH\cancelto{0}{\Swuv} - \estH^\ast\cancelto{0}{\Swvu} + \Swvv
         &= \abs{\estH}^2\Swxx - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swyy
