replace app:xcordef cross-reference with xcordef paper reference

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -164,7 +164,7 @@ and arrive at a function called ``\fncte{transmissibility}"
 %---------------------------------------
 Let $\opS$ be a \structe{system} with input $\rvx(n)$ and output $\rvy(n)$.
 \defboxt{
-  \fnctd{transmissibility $\Twxy(\omega)$} is defined as
+  The \fnctd{transmissibility} function $\Twxy(\omega)$ is defined as
   \qquad$\ds
   \Twxy(\omega) \eqd \sqrt{\frac{\Swyy(\omega)}{\Swxx(\omega)}}
   $
@@ -204,7 +204,7 @@ then $\estHa$ (next definition) is the ideal estimator in the sense that $\estHa
   \citerpgc{bendat2010}{185}{1118210824}{$H_1(f) = \ffrac{G_{xy}(f)}{G_{xx}(f)}$ (6.37)},
   \citerpgc{shin2008}{293}{0470725648}{
     $H_1(f)=\ffrac{\Swxy(f)}{\Swxx(f)}$ (9.63);
-    which differs from \pref{def:H1}, but see \prefp{app:xcordef}
+    which differs from \pref{def:H1}, but see \citeP{greenhoe2019} %\prefp{app:xcordef}
     },
   \citeP{bendat1978}{cited by Cobb(1988)---variance estimate for $\estHa$},
   \citePc{allemang1979}{cited by Shin(2008)},
@@ -245,14 +245,14 @@ Note also that in the case of both no input and no output noise, then $\estHa=\e
 \begin{definition} %[\fnctd{Inverse Method}]
 \footnote{
   \citerpgc{shin2008}{293}{0470725648}{$H_2(f)=\ffrac{\Swyy(f)}{\Swyx(f)}$ (9.65);
-    which differs from \pref{def:H2}, but see \prefp{app:xcordef}
+    which differs from \pref{def:H2}, but see \citeP{greenhoe2019} %\prefp{app:xcordef}
     },
   \citerpgc{bendat2010}{186}{1118210824}{$H_2(f) = \ffrac{G_{yy}(f)}{G_{yx}(f)}$ (6.42)},
   \citePc{mitchell1980}{cited by Cobb(1988)},
   \citePpc{mitchell1982}{278}{``Define what will be called an inverse method for calculation of a FRF as\ldots";
     $\~H_2(f)=\ffrac{G_{yy}}{G_{yx}}$ (6);
     Note this differs with \pref{def:H2} by a conjugate, but note that Mitchell seems to follow Bendat (see his [3] and [4]),
-    which would explain this difference \xref{app:xcordef}},
+    which would explain this difference, % \xref{app:xcordef}},
   \citePpc{cobb1988}{3}{$^2\hat{H}(f)=\ffrac{\hat{G}_{yy}(f)}{\hat{G}_{xy}(f)}$ (1)},
   \citePpc{white2006}{678}{$H_2(f)=\ffrac{\hat{S}_{y_my_m}(f)}{\hat{S}_{y_mx_m}(f)}$ (2) which differs by conjugate, references Bendat and Piersol}
   }
@@ -466,7 +466,7 @@ We can thus justifiably define a \fnctd{complex transmissibility} function as $\
 and the magnitude of this \fncte{complex transmissibility} function is the \fncte{ordinary transmissibility}
 function of \prefpp{def:Txy}.
 \rembox{\begin{array}{Mc>{\ds}l}
-  \fnctd{complex transmissibility} $\Twxy'(\omega)$ &\eqd& \estHgm(\omega)
+  The \fnctd{complex transmissibility} function $\Twxy'(\omega)$ &\eqd& \estHgm(\omega)
 \end{array}}
 \end{remark}
 
