--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -682,7 +682,7 @@ In 1984 Goyder proposed an estimator (next definition) that is based on three si
 Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rvp(n)$.
 \defboxt{
   The \fnctd{transfer function estimate $\estHc(\omega)$} is defined as
-  \\\indentx$\ds
+  \qquad$\ds
   \estHc(\omega) \eqd \frac{\Swxx[py](\omega)}{\Swxx[px](\omega)}
   $
   }
