--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -581,7 +581,7 @@
       }}
    {\end{list}}
 
-\newenvironment{listi}[1][\imark]%list for indexes
+\newenvironment{listi}[1][\imarks]%list for indexes
   {\begin{list}{#1}{
       \setlength{\topsep        }{0ex}
       \setlength{\partopsep     }{0ex}
