--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -252,7 +252,7 @@ Note also that in the case of both no input and no output noise, then $\estHa=\e
   \citePpc{mitchell1982}{278}{``Define what will be called an inverse method for calculation of a FRF as\ldots";
     $\~H_2(f)=\ffrac{G_{yy}}{G_{yx}}$ (6);
     Note this differs with \pref{def:H2} by a conjugate, but note that Mitchell seems to follow Bendat (see his [3] and [4]),
-    which would explain this difference, % \xref{app:xcordef}},
+    which would explain this difference}, % \xref{app:xcordef},
   \citePpc{cobb1988}{3}{$^2\hat{H}(f)=\ffrac{\hat{G}_{yy}(f)}{\hat{G}_{xy}(f)}$ (1)},
   \citePpc{white2006}{678}{$H_2(f)=\ffrac{\hat{S}_{y_my_m}(f)}{\hat{S}_{y_mx_m}(f)}$ (2) which differs by conjugate, references Bendat and Piersol}
   }
