redistribute and better alphabetically order digcom.bib references

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -219,6 +219,31 @@
   pages        = {23--36},
   }
 
+@article{blackman1958mar,
+  author       = {R. B. Blackman and J. W. Tukey},
+  title        = {The Measurement of Power Spectra from the Point of View of Communications Engineering---Part II},
+  year         = {1958},
+  month        = {March},
+  journal      = {The Bell System Technical Journal},
+  volume       = {37},
+  urlx         = {https://archive.org/details/bstj37-2-485},
+  url          = {https://archive.org/download/bstj37-2-485},
+  pages        = {485--569},
+  }
+
+@book{blackman1959,
+  author       = {R. B. Blackman and J. W. Tukey},
+  title        = {The Measurement of Power Spectra from the Point of View of Communications Engineering},
+  publisher    = {Dover Publications},
+  address      = {New York},
+  year         = {1959},
+  pages        = {190},
+  isbn         = {486-60507-8},
+  urlx         = {https://archive.org/details/TheMeasurementOfPowerSpectra},
+  url          = {https://archive.org/download/TheMeasurementOfPowerSpectra},
+  note         = {``unabridged and corrected republication of the work originally published in January and March, 1958, in Volume XXXVII of the \emph{Bell System Technical Journal}"},
+  }
+
 @book{bolstad2007,
   isbn         = {9780470141151},
   isbn10       = {0470141158},
@@ -329,6 +354,21 @@
   urla         = {http://www.amazon.com/dp/9780135016190},
   }
 
+@book{chow1978,
+  author       = {Y. S. Chow and H. Teicher},
+  title        = {Probability Theory: Independence Interchangeability Martingales},
+  year         = {1978},
+  publisher    = {Springer-Verlag},
+  address      = {New York},
+  edition      = {1},
+  pages        = {455},
+  isbn         = {9781468400625},
+  isbn10       = {1468400622},
+  url          = {http://books.google.com/books?vid=ISBN1468400622},
+  urlw         = {http://www.worldcat.org/isbn/1468400622},
+  urla         = {http://www.amazon.com/dp/1468400622},
+  }
+
 @article{csiszar1961,
   author       = {I. Csiszar},
   title        = {Information-type measures of difference of probability functions and indirect observations},
@@ -390,6 +430,17 @@
   urla         = {http://www.amazon.com/dp/1846281687},
   }
 
+@book{devroye1986,
+  author       = {Luc Devroye},
+  title        = {Non-Uniform Random Variate Generation},
+  publisher    = {Springer-Verlag},
+  address      = {New York},
+  year         = {1986},
+  pages        = {857},
+  url          = {http://www.eirene.de/Devroye.pdf},
+  isbn         = {0387963057},
+  }
+  
 @book{ewins1985,
   isbn10       = {086380036X},
   isbn         = {9780863800368},
