start Bayesian Networks tex file

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -113,6 +113,21 @@
   url          = {https://books.google.com/books?id=QrPuAAAAMAAJ},
   }
 
+@inbook{bengal2008,
+  isbn         = {9780470018613},
+  isbn10       = {0470018615},
+  author       = {Irad Ben-Gal},
+  title        = {Bayesian Networks},
+  booktitle    = {Encyclopedia of Statistics in Quality and Reliability},
+  volume       = {1},
+  bookauthor   = {Ron S. Kenett and Frederick W. Faltin},
+  editor       = {Fabrizio Ruggeri and Ron Kenett and Ron S. Kenett and Frederick W. Faltin},
+  publisher    = {John Wiley},
+  year         = {2008},
+  url          = {https://onlinelibrary.wiley.com/doi/full/10.1002/9780470061572.eqr089},
+  note         = {\url{http://www.eng.tau.ac.il/~bengal/BN.pdf}},
+  }
+
 @book{bendat1966,
   author       = {Julius S. Bendat and Allan G. Piersol},
   title        = {Measurement and Analysis of Random Data},
@@ -325,6 +340,18 @@
   year         = {2006},
   }
 
+@book{chapmann2017,
+  isbn         = {9781978304871},
+  isbn10       = {1978304870},
+  title        = {Markov Models: Introduction to Markov Chains, Hidden Markov Models and Bayesian Networks},
+  series       = {Advanced Data Analytics},
+  author       = {Joshua Chapmann},
+  publisher    = {CreateSpace Independent Publishing Platform},
+  year         = {2017},
+  pages        = {46},
+  url          = {https://www.amazon.com/dp/1978304870},
+  }
+
 @article{chen2012,
   title        = {PolInSAR Complex Coherence Estimation Based on Covariance Matrix Similarity Test},
   author       = {Si-Wei Chen and Xue-Song Wang and Motoyuki Sato},
@@ -417,6 +444,19 @@
   oclc         = {22305429},
   }
 
+@book{darwiche2009,
+  isbn         = {9780521884389},
+  isbn10       = {0521884381},
+  title        = {Modeling and Reasoning with Bayesian Networks},
+  author       = {Adnan Darwiche},
+  edition      = {reprint},
+  publisher    = {Cambridge University Press},
+  year         = {2009},
+  pages        = {548},
+  url          = {http://books.google.com/books?vid=ISBN9780521884389},
+  urla         = {http://www.amazon.com/dp/9780521884389},
+  }
+
 @book{dekking2006,
   isbn10       = {1846281687},
   isbn         = {9781846281686},
@@ -481,6 +521,33 @@
   year         = {1971},
   publisher    = {John Wiley \& Sons/ Mei Ya Publications},
   address      = {New York/Taipei},
+  }
+
+@book{fenton2018,
+  isbn         = {9781351978965},
+  isbn10       = {1351978969},
+  title        = {Risk Assessment and Decision Analysis with Bayesian Networks},
+  author       = {Norman Fenton and Martin Neil},
+  edition      = {2},
+  publisher    = {CRC Press},
+  year         = {2018},
+  pages        = {638},
+  url          = {http://books.google.com/books?vid=ISBN9781351978965},
+  urla         = {http://www.amazon.com/dp/9781351978965},
+  }
+
+@book{jensen2013,
+  isbn         = {9781475735024},
+  isbn10       = {1475735022},
+  title        = {Bayesian Networks and Decision Graphs},
+  series       = {Information Science and Statistics},
+  author       = {Finn Verner Jensen},
+  authorx      = {Thomas Dyhre Nielsen and Finn Verner Jensen},
+  publisher    = {Springer Science \& Business Media},
+  year         = {2013},
+  pages        = {268},
+  url          = {http://books.google.com/books?vid=ISBN9781475735024},
+  urla         = {http://www.amazon.com/dp/9781475735024},
   }
 
 @article{fisher1922,
@@ -1058,6 +1125,20 @@
   address      = {Paris},
   url          = {http://www.archive.org/details/calculdeprobabil00poinrich},
   language     = {French},
+  }
+
+@book{pourret2008,
+  isbn         = {9780470994542},
+  isbn10       = {0470994541},
+  title        = {Bayesian Networks: A Practical Guide to Applications},
+  volume       = {73},
+  series       = {Statistics in Practice},
+  editor       = {Olivier Pourret and Patrick Na/:im and Bruce Marcot},
+  publisher    = {John Wiley \& Sons},
+  year         = {2008},
+  pages        = {446},
+  url          = {http://books.google.com/books?vid=ISBN9780470994542},
+  urla         = {http://www.amazon.com/dp/9780470994542},
   }
 
 @article{rosenblatt1956,
