--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -276,6 +276,7 @@
 %---------------------------------------
 % book citations
 %---------------------------------------
+\newcommand{\fullcite}{\cite}
 \newcommand{\citefull}[1]{\citebullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
 \newcommand{\citer}   [1]{\citebullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
 \newcommand{\citerp}  [2]{\citebullet\;\cite{#1}, page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
@@ -382,7 +383,8 @@
 \newcommand{\citerppu} [4]{\citebullet\;\cite{#1} \href{#4}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerpg}  [3]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerpgc} [4]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#3\&pg=PA#2}{page~#2} \lcomdelim#4\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
-\newcommand{\citerg}   [2]{\citebullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
+%\newcommand{\citerg}   [2]{\citebullet\;\href{http://books.google.com/books?vid=ISBN#2}{\cite{#1}}} % citation with google book search link to page
+\newcommand{\citerg}   [2]{\citebullet\;\cite{#1} \lcomdelim ISBN:\href{http://books.google.com/books?vid=ISBN#2}{#2}\rcomdelim}
 \newcommand{\citergc}  [3]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#2}{\lcomdelim#3\rcomdelim}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerppg} [4]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3}\index[xref]{{\cite{#1}}}} % citation with google book search link to page
 \newcommand{\citerppgc}[5]{\citebullet\;\cite{#1} \href{http://books.google.com/books?vid=ISBN#4\&pg=PA#2}{pages~#2--#3} \lcomdelim#5\rcomdelim\index[xref]{{\cite{#1}}}} % citation with google book search link to page
