model-based estimation

--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -12,6 +12,38 @@
 \section{Estimation types}
 %======================================
 %--------------------------------------
+\paragraph{Estimation model.}
+%--------------------------------------
+Starting in the 1980s and continuing into 2019, James V. Candy has proposed 
+the \structd{model-based approach}{\footnotemark} 
+to estimation. This approach partitions the task of estimation into three parts:
+\footnotetext{
+  \citerg{candy1985}{9780070097254},
+  \citerg{candy1988}{9780070097513},
+  \citeP{candy1992},
+  \citerpg{candy2005}{5}{9780471732662},
+  \citerpg{candy2019}{7}{9781119457763}.
+  ``Dr. Candy received the 
+  IEEE Distinguished Technical Achievement Award for the
+  \emph{development of model-based signal processing in ocean acoustics}":
+  \citerpg{rossing2015}{1234}{9781493907557}
+  }
+\begin{enumerate}
+  \item The \structd{model}:
+        The presumed system architecture based on priori knowledge
+        of the system.
+        A very common example is the \structe{additive noise model}.
+  \item The \opd{algorithm}: 
+        The operation used to calculate the estimate.
+        An \ope{algorithm} may also be called a \opd{processor},
+        \opd{filter}, or \opd{method}.
+  \item The \fnctd{criterion function}: 
+        A \fncte{function} which measures the performance
+        of the algorithm.
+        This function may also be called a \fnctd{cost function}. 
+\end{enumerate}
+
+%--------------------------------------
 \paragraph{Estimation types.}
 %--------------------------------------
 Let $\rvx(t;\theta)$ be a waveform with parameter $\theta$.
