--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -325,6 +325,18 @@
   pages        = {386},
   }
 
+@journal{candy1992,
+  year         = {1992},
+  month        = {August},
+  title        = {Ocean acoustic signal processing: A model-based approach},
+  journal      = {The Journal of the Acoustical Society of America},
+  volume       = {92},
+  number       = {6},
+  url          = {https://doi.org/10.1121/1.404168},
+  author       = {James V. Candy and E. J. Sullivan},
+  doi          = {10.1121/1.404168},
+  }
+
 @book{candy2005,
   isbn         = {9780471732662},
   isbn10       = {0471732664},
