--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -114,7 +114,7 @@ it often yields an estimate that is not optimal in the ML sense.
 \section{Estimation criterion}
 \label{sec:est_criterion}
 %=======================================
-\begin{figure}[h]
+\begin{figure}
 \centering%
 \includegraphics{graphics/latestimation.pdf}
 \caption{
@@ -348,6 +348,12 @@ and $\nre(\estT)$    the \fncte{normalized rms error} \xref{def:nre} of an estim
 %--------------------------------------
 \section{Estimation techniques}
 %--------------------------------------
+\begin{figure}
+\centering%
+\includegraphics{graphics/estimation_techniques.pdf}
+\caption{Estimation techniques\label{fig:est-tech}}
+\end{figure}
+
 \begin{figure}[ht]
 \centering%
 \setlength{\unitlength}{0.15mm}
@@ -442,15 +448,6 @@ and $\nre(\estT)$    the \fncte{normalized rms error} \xref{def:nre} of an estim
    \label{fig:est-tech}
    }
 \end{figure}
-
-%\begin{figure}[ht]
-%\center{\epsfig{file=estimate.eps, width=12cm, clip=}}
-%%\center{\includegraphics[0,0][4in,4in]{df1.eps}}
-%\caption{
-%   Estimation techniques
-%   \label{fig:estimate}
-%   }
-%\end{figure}
 
 %--------------------------------------
 \section{Sequential decoding}
