model-based friendly chapter titles

--- a/common/matched_filter.tex
+++ b/common/matched_filter.tex
@@ -3,7 +3,7 @@
 % Daniel J. Greenhoe
 %============================================================================
 %=======================================
-\chapter{Estimation using Matched Filter}
+\chapter{Matched Filter Algorithm}
 %=======================================
 %======================================
 %\paragraph{Detection methods.}
