--- a/common/noise.tex
+++ b/common/noise.tex
@@ -3,7 +3,7 @@
 % LaTeX file
 %============================================================================
 %============================================================================
-\chapter{Estimating Noise}
+\chapter{Noise Estimation}
 %============================================================================
 
 
