Wold's Theorem references. Box and Jenkins

--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -29,9 +29,12 @@ to estimation. This approach partitions the task of estimation into three parts:
   \citerpg{rossing2015}{1234}{9781493907557}
   }
 \begin{enumerate}
-  \item The \structd{model}:
-        The presumed system architecture based on priori knowledge
-        of the system.
+  \item The \structd{model}:\footnote{
+          \citerppc{box1976}{173}{207}{Chapter 6 ``Model Identification"}
+          }
+        The presumed system architecture,
+        ``the form of which is usually suggested by prior knowledge, 
+        physical understanding or guesswork."\footnote{\citerp{scargle1979}{5}}
         A very common example is the \structe{additive noise model}.
   \item The \opd{algorithm}: 
         The operation used to calculate the estimate.
