--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -67,14 +67,14 @@ In this section we present two types of norm minimization:\footnote{
 
 \begin{enume}
   \item minimum mean square estimation (MMSE): \\
-        The MMS estimate is a \hie{stochastic} estimate.
+        The MMS estimate is a \prope{stochastic} estimate.
         To compute the MMS estimate, the we do not need to know
         the actual data values, but we must know certain system statistics
         which are the
         input data autocorrelation and input/output crosscorrelation.
         The cost function is the expected value of the norm squared error.
-   \item least square estimation (LSE): \\
-        The LS estimate is a \hie{deterministic} estimate.
+   \item least square estimation (LSE):\footnote{\citerp{scargle1979}{5}} \\
+        The LS estimate is a \prope{deterministic} estimate.
         To compute the LS estimate, we must know the actual data values
         (although these may be ``noisy" measurements).
         The cost function is the norm squared error.
