--- a/abcstat/graphics/shell_estimation_techniques.tex
+++ b/abcstat/graphics/shell_estimation_techniques.tex
@@ -7,8 +7,8 @@
 \input{shelltop.tex}%
 \begin{document}%
   %\psset{unit=2\latunit}%
-  %\psset{xunit=1.0\latunit}%
-  %\psset{yunit=1.0\latunit}%
+  \psset{xunit=2.0\latunit}%
+  \psset{yunit=2.0\latunit}%
   \gsize%
   \input{../../common/math/graphics/estimation_techniques.tex}%
 \end{document}%
