--- a/common/math/graphics/estimation_techniques.tex
+++ b/common/math/graphics/estimation_techniques.tex
@@ -4,7 +4,7 @@
 % nominal xunit = 20mm
 % nominal yunit = 20mm
 %============================================================================
-\begin{pspicture}(-6,-4.3)(4,0.2)%
+\begin{pspicture}(-5,-4.3)(4,0.2)%
    %------------------------------------
    % parameters
    %------------------------------------
@@ -33,13 +33,13 @@
    \rput(-3,-2){\rnode{codetree}{\psframebox{\parbox{30mm}{\centering%
      \opb{code tree}%
      }}}}%
-   \rput(-5,-4){\rnode{trellis}{\psframebox{\parbox{30mm}{\centering%
+   \rput(-4.2,-4){\rnode{trellis}{\psframebox{\parbox{20mm}{\centering%
      \opb{Viterbi Algorithm}%
      }}}}%
-   \rput(-3,-4){\rnode{fano}{\psframebox{\parbox{30mm}{\centering%
+   \rput(-3,-4){\rnode{fano}{\psframebox{\parbox{20mm}{\centering%
      \opb{Fano Algorithm}%
      }}}}%
-   \rput(-1,-4){\rnode{stack}{\psframebox{\parbox{30mm}{\centering%
+   \rput(-1.8,-4){\rnode{stack}{\psframebox{\parbox{20mm}{\centering%
      \opb{Stack Algorithm}%
      }}}}%
    \ncline{tech}{seqdecode}%
@@ -53,7 +53,7 @@
    \rput(-1,-2){\rnode{mms}{\psframebox{\parbox{30mm}{\centering%
      \opb{Minimum Mean Square}
      }}}}%
-   \rput(-1,-3){\rnode{ls}{\psframebox{\parbox{30mm}{\centering
+   \rput(-1,-3){\rnode{ls}{\psframebox{\parbox{30mm}{\centering%
      \opb{Least Squares}
      }}}}%
    \ncline{tech}{normmin}%
@@ -62,19 +62,19 @@
    %------------------------------------
    % gradient search
    %------------------------------------
-   \rput(1,-2){\rnode{steepd}{\psframebox{\parbox{30mm}{\centering
+   \rput(1,-2){\rnode{steepd}{\psframebox{\parbox{30mm}{\centering%
      \opb{Steepest Descent}
      }}}}%
-   \rput(1,-3){\rnode{lms}{\psframebox{\parbox{30mm}{\centering
+   \rput(1,-3){\rnode{lms}{\psframebox{\parbox{30mm}{\centering%
      \opb{Least Mean Square}
      }}}}%
-   \rput(3,-2){\rnode{newton}{\psframebox{\parbox{30mm}{\centering
+   \rput(3,-2){\rnode{newton}{\psframebox{\parbox{30mm}{\centering%
      \opb{Newton Method}
      }}}}%
-   \rput(3,-3){\rnode{kalman}{\psframebox{\parbox{30mm}{\centering
+   \rput(3,-3){\rnode{kalman}{\psframebox{\parbox{30mm}{\centering%
      \opb{Kalman Filter}
      }}}}%
-   \rput(3,-4){\rnode{rls}{\psframebox{\parbox{30mm}{\centering
+   \rput(3,-4){\rnode{rls}{\psframebox{\parbox{30mm}{\centering%
      \opb{Recursive Least Squares}
      }}}}%
    \ncline{tech}{gradsearch}%
